# MidiPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  notes  start.sh  test.py  toolchain-mingw.cmake
.github/workflows/: cmake-multi-platform.yml
cmake/: x86_64_Linux_toolchain.cmake  x86_64_Windows_toolchain.cmake
include/: Audio.hpp  AudioFile.hpp  AudioFileManager.hpp  InputManager.hpp  Logger.hpp  MidiMath.hpp  MidiPlayer.hpp  SoundFont.hpp  Window.hpp  WindowContext.hpp  audio_backend.hpp  colors.hpp  config.hpp  envelope.hpp  inc.hpp  nodes.hpp  path.hpp
include/AudioBackend/: Instrument.hpp  PipelineInfo.hpp
include/AudioBackend/Components/: ADSR.hpp  AudioComponent.hpp  AudioPlayer.hpp  CombFilter.hpp  Components.hpp  FilePlayer.hpp  HighPassFilter.hpp  KeyboardFrequency.hpp  LowPassFilter.hpp  Master.hpp  Multiplier.hpp  Number.hpp  Oscillator.hpp  Overdrive.hpp  SoundFontPlayer.hpp
include/UI/: AudioSpectrum.hpp  Colors.hpp  FileBrowser.hpp  IDManager.hpp  ImPlotUI.hpp  LinkManager.hpp  Log.hpp  Message.hpp  NodeEditorUI.hpp  NodeManager.hpp  UI.hpp  UIToBackendAdapter.hpp
include/UI/fonts/: RobotoRegular.h
resources/instruments/: .json  ambiant.json  bass.json  beach-waves.json  beat.json  cool-saw-dig.json  daydream.json  distant-waves.json  echo.json  hyper-light-drifter-tier.json  mouiiinw.json  mut-mut.json  piano.json  pluck.json  pssht.json  serious.json  techno-probably.json  test.json  triple-osc.json  tumtum-tum.json  whoooo.json
ressources/instruments/: .json  _default.json  ambiant.json  bass.json  beat.json  default.json  echo.json  hyper-light-drifter-tier.json  mut-mut.json  piano-backup.json  piano-lowpass.json  piano-sinewave.json  piano.json  pluck.json  pssht.json  serialization.json  serialization1.json  techno-probably.json  tumtum-tum.json
src/: Audio.cpp  AudioFileManager.cpp  InputManager.cpp  Logger.cpp  MidiPlayer.cpp  SoundFont.cpp  Window.cpp  audio_management.cpp  generate_audio.cpp  handle_inputs.cpp  main.cpp  rtaudio.cpp  stb_image_impl.cpp  tinysoundfont_impl.cpp
src/AudioBackend/: Instrument.cpp
src/UI/: AudioSpectrum.cpp  FileBrowser.cpp  IDManager.cpp  ImPlotUI.cpp  LinkManager.cpp  Log.cpp  NodeEditorUI.cpp  NodeEditorUI.hpp  NodeManager.cpp  UI.cpp  UI.hpp  UIToBackendAdapter.cpp  UI_Settings.cpp
src/UI/fonts/: RobotoRegular.cpp
